# mcp-immojump

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  mcp-immojump-build.yml
docs/submission/: DEMO_ACCOUNT.md  LANDING_PAGE.md  PRIVACY_POLICY.md  README.md  SUBMISSION_CHECKLIST.md
docs/submission/branding/: README.md
src/mcp_immojump/: __init__.py  _app.py  _shared.py  client.py  oauth.py  server.py
src/mcp_immojump/servers/: __init__.py  _base.py  crm.py  investor.py  org.py  pipeline.py  profi.py  properties.py  standard.py
src/mcp_immojump/tools/: __init__.py  activities.py  activity_templates.py  connection.py  contacts.py  custom_fields.py  deals.py  documents.py  email_messages.py  feed.py  immobilien.py  investor.py  loans.py  milestones.py  organisation.py  pipelines.py  statuses.py  tags.py  tickets.py  units.py  user.py  valuation.py
tests/: test_activity_template_update_safe.py  test_annotation_coverage.py  test_client.py  test_client_crm.py  test_client_investor.py  test_client_org.py  test_client_pipeline.py  test_client_properties.py  test_date_normalization.py  test_e2e_investor_scenarios.py  test_middleware_integration.py  test_oauth.py  test_origin_validation.py  test_server.py  test_server_registration.py
