[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-immojump"
version = "0.1.0"
description = "MCP servers for the immoJUMP real estate investment platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "ImmoJUMP" },
]
keywords = ["mcp", "immojump", "crm", "contacts"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp>=1.12.4",
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/immoJUMP/mcp-immojump"
Repository = "https://github.com/immoJUMP/mcp-immojump"
Issues = "https://github.com/immoJUMP/mcp-immojump/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.scripts]
mcp-immojump = "mcp_immojump.server:main"
mcp-immojump-properties = "mcp_immojump.servers.properties:main"
mcp-immojump-crm = "mcp_immojump.servers.crm:main"
mcp-immojump-pipeline = "mcp_immojump.servers.pipeline:main"
mcp-immojump-org = "mcp_immojump.servers.org:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
